crates/runner/src/tui/snapshots/ryuzi_runner__tui__render__tests__dashboard_options_overlay.snap
---
source: crates/runner/src/tui/render.rs
expression: text
---

 r ryuzi
 1 Status  2 Daemon  3 Sessions  4 Config

 ╭CONFIG──────────────────────────────────────────────────────────────────────╮
 │ GENERAL                                                                    │
 │ › Workdir root                     (unset)                                 │
 │  Parent directory where project repos live  (e.g. /home/you/repos)         │
 │   Default model                    (unset)                                 │
 │   Default effort                   medium                                  │
 │   Default permission mode          default                                 │
 │ ↑↓ select · Enter edit · Space toggle provider · Esc cancel                │
 ╰────────────────────────────────────────────────────────────────────────────╯
 ╭────────────────────────────────────────────────────────────────────────────╮
 │ Options                                                                    │
 │ Tab / 1-4 / arrows   switch tabs                                           │
 │ s                    start / stop daemon (Daemon tab)                      │
 │ Enter                open / edit                                           │
 │ Esc                  back / cancel                                         │
 │ ?                    toggle this help                                      │
 │ q                    quit                                                  │
 ╰────────────────────────────────────────────────────────────────────────────╯
 Tab switch  ·  ↑↓ select  ·  Enter edit  ·  ? options  ·  q quit
